infra/k8s/envoy-gateway/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-gateway
  namespace: pine-gateway
spec:
  parentRefs:
    - name: pine
      namespace: pine-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api-gateway
          port: 4000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: data-gateway
  namespace: pine-gateway
spec:
  parentRefs:
    - name: pine
      namespace: pine-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /data
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: data-gateway
          port: 4001
